tests/parser/IncludeSource.diag
C:\Users\Hydro\Downloads\Repository Groups\MXMLExtrema\as3parser\tests\parser\IncludeSource.as:2:9: Syntax error #1091: Unexpected include extension. Expected the file extension '.include.as'.