tests/parser/IncludeSource.tree
{
  "location": "1:1-2:31",
  "packages": [],
  "directives": [
    {
      "IncludeDirective": {
        "location": "1:1-1:39",
        "source": "./IncludeTarget1.include.as",
        "nested_packages": [],
        "nested_directives": [
          {
            "ExpressionStatement": {
              "location": "1:1-1:19",
              "expression": {
                "Call": {
                  "location": "1:1-1:18",
                  "base": {
                    "QualifiedIdentifier": {
                      "location": "1:1-1:6",
                      "attribute": false,
                      "qualifier": null,
                      "id": {
                        "Id": [
                          "trace",
                          "1:1-1:6"
                        ]
                      }
                    }
                  },
                  "arguments": [
                    {
                      "StringLiteral": {
                        "location": "1:7-1:17",
                        "value": "target 1"
                      }
                    }
                  ]
                }
              }
            }
          }
        ]
      }
    },
    {
      "IncludeDirective": {
        "location": "2:1-2:31",
        "source": "./IncludeTarget2.as",
        "nested_packages": [],
        "nested_directives": []
      }
    }
  ]
}